--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,313 @@
-.App {
-  text-align: center;
+html,
+body,
+.app,
+#root {
+  height: 100%;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Color */
+.white {
+  color: rgb(255, 255, 255);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bg-black {
+  background-color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bg-grey {
+  background-color: grey;
+}
+
+.bg-blue {
+  background-color: blue;
+}
+
+.bg-white {
+  background-color: #fad390;
+}
+
+.bg-dark {
+  background-color: #cfc5d1eb;
+}
+
+.bg-light {
+  background-color: #603ca2;
+}
+
+.bg-orange {
+  background-color: rgb(162, 0, 255);
+}
+
+.border-yellow {
+  border: 2px solid yellow !important;
+}
+
+.border-blue {
+  border: 2px solid rgb(248, 7, 176) !important;
+}
+
+.badge {
+  display: inline-block;
+  border-radius: 6px;
+}
+
+/* Links/Text */
+a {
+  color: skyblue;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.font-md {
+  font-size: 16px;
+}
+
+.capitalize {
+  text-transform: capitalize;
+}
+
+/* Flex */
+.d-flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.justify-content-center {
   justify-content: center;
+}
+
+.justify-content-end {
+  justify-content: flex-end;
+}
+
+.justify-self-end {
+  justify-self: end;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.align-items-start {
+  align-items: start;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
+}
+
+/* Grid */
+.d-grid {
+  display: grid;
+}
+
+.nav-grid {
+  grid-template-columns: 225px auto 225px;
+}
+
+/* Utils */
+.m-0 {
+  margin: 0;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.my-2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.my-1 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.mx-2 {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.m-2 {
+  margin: 20px;
+}
+
+.ml-3 {
+  margin-left: 30px;
+}
+
+.mb-2 {
+  margin-bottom: 20px;
+}
+
+.p-2 {
+  padding: 20px;
+}
+
+.p-4 {
+  padding: 40px;
+}
+
+.py-1 {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.px-2 {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.py-2 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.p-1 {
+  padding: 10px;
+}
+
+.vw-100 {
+  width: 100vw;
+}
+
+.vh-100 {
+  height: calc(100vh - 80px);
+}
+
+.h-100 {
+  height: 100%;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  clip-path: inset(50%);
+  border: 0;
+}
+
+.d-none {
+  display: none;
+}
+
+.d-inline-block {
+  display: inline-block;
+}
+
+/* Components */
+
+main.container {
+  display: grid;
+  grid-template-columns: 350px auto;
+  grid-template-rows: auto;
+  column-gap: 10px;
+}
+
+header {
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.board {
+  border: 1px solid black;
+  width: 426px;
+  height: 426px;
+  justify-self: center;
+  margin-right: 340px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.scoreboard {
+  background-color: #f6b93b;
+}
+
+.square {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  text-align: center;
+  vertical-align: bottom;
+  border: 2px solid transparent;
+}
+
+.square img {
+  width: 50px;
+  height: 50px;
+}
+
+.player-card {
+  min-height: 100px;
+  border: 2px solid black;
+  border-radius: 4px;
+}
+
+.move-history {
+  min-height: 100px;
+  border: 2px solid black;
+  border-radius: 4px;
+  max-height: 350px;
+}
+
+.move-description {
+  display: block;
+  min-width: 100px;
+}
+
+.move-description > span {
+  width: 50px;
+  display: inline-block;
+}
+
+.move-description > span:first-child {
+  margin-left: 15px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+
+.graveyard {
+  flex-flow: wrap;
+}
+
+@media only screen and (max-width: 796px) {
+  main.container {
+    display: grid;
+    grid-template-columns: 1fr;
   }
-  to {
-    transform: rotate(360deg);
+
+  main.container > .board {
+    grid-row-start: 1;
+    margin-left: auto;
+    margin-right: auto;
   }
+}
+
+/* On Small Screens 600px or less */
+@media only screen and (max-width: 666px) {
+  .nav-grid {
+    grid-template-columns: auto;
+  }
+
+  .hide-on-sm {
+    display: none;
+  }
+}
+
+.scrollable {
+  overflow-y: scroll;
 }
